# rag-demo

./: .env.example  .gitignore  README.md  README.v1.2.md  config.example.yaml  config.yaml  pyproject.toml
data/: eval_novel.json
data/index.sample/: faiss.index  faiss_meta.json  manifest.json  status.json
data/raw.sample/: 01-welcome.md  02-microservices.md  03-faq.md  04-llm-providers.md  05-cold-start-demo.md
docs/: README.md  architecture.md  github-setup.md  roadmap.md
docs/adr/: 0000-template.md  0001-llm-framework.md  0002-vector-store.md  0003-llm-embedding-source.md  0004-web-framework.md  0005-frontend-shape.md  README.md
docs/dev/: README.md  design.md
docs/dev/runbooks/: local-dev.md
docs/envops/: README.md  deployment.md  environments.md  runbook.md
docs/envops/runbooks/: local-dev.md
docs/handoffs/: 2026-06-24-from-dev-to-reviewer-design.md  2026-06-24-from-reviewer-to-dev-design-v1.1.md  2026-06-24-from-reviewer-to-product-and-dev-prd-v0.3.md  README.md
docs/product/: README.md  backlog.md
docs/product/specs/: MAQ-5-prd-kb-qa.md
docs/release-notes/: v1.2.md
docs/review/: README.md
docs/review/checklists/: code-review.md
docs/review/reports/: 2026-06-24-MAQ-5-prd-review.md  2026-06-24-MAQ-7-prd-v0.2-review.md  2026-06-24-MAQ-9-design-review.md  2026-06-25-MAQ-22-code-review.md  2026-06-25-MAQ-43-final-review.md  2026-06-25-MAQ-46-code-review.md  2026-06-26-MAQ-51-code-review.md
docs/templates/: handoff.md  product-spec.md  review-report.md
scripts/: build_sample_index.py  doctor.sh  eval_recall.py  init_static.py
src/rag_demo/: __init__.py  __main__.py  chunker.py  config.py  errors.py  generate.py  ingest.py  logging_setup.py  retrieve.py  validate.py  vault_uri.py
src/rag_demo/llm/: __init__.py  base.py  factory.py  openai_compat.py
src/rag_demo/vector/: __init__.py
src/rag_demo/web/: __init__.py  main.py
src/rag_demo/web/static/: index.html  style.css
tests/: test_chat.py  test_chunk.py  test_cold_start.py  test_cold_start_e2e.py  test_config.py  test_errors.py  test_eval_recall.py  test_ingest.py  test_live_e2e.py  test_llm_base.py  test_llm_factory.py  test_logging.py  test_main.py  test_retrieve.py  test_smoke.py  test_validate.py  test_vault_uri.py  test_vector.py  test_web.py
