[project]
name = "rag-demo"
version = "0.1.0"
description = "A small Retrieval-Augmented Generation demo using Multica + Claude Code + Codex."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "maqy" }]

# ── Default deps: minimal, swappable. Add real choices once the user
#    confirms stack (LangChain vs LlamaIndex, FAISS vs Chroma, etc).
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Pick ONE of these once we know the user's preference:
langchain  = ["langchain>=0.2", "langchain-openai>=0.1", "langchain-community>=0.2"]
llamaindex = ["llama-index>=0.10", "llama-index-embeddings-openai>=0.2"]

# Local vector stores:
faiss    = ["faiss-cpu>=1.8"]
chroma   = ["chromadb>=0.5"]

# Embedding / LLM clients — only enabled if the user has the keys.
openai   = ["openai>=1.40"]
anthropic = ["anthropic>=0.30"]

# Dev / lint:
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
rag-demo = "rag_demo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_demo"]

# ── Tooling ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# errors.py 的 ERROR_CODES 字典需要中文 message 跨列对齐, E501 误伤
"src/rag_demo/errors.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
