[project]
name = "rag-demo"
version = "0.1.0"
description = "A small Retrieval-Augmented Generation demo using Multica + Claude Code + Codex."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "maqy" }]

# ── Default deps: minimal, swappable. Add real choices once the user
#    confirms stack (LangChain vs LlamaIndex, FAISS vs Chroma, etc).
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
# Pick ONE of these once we know the user's preference:
langchain  = ["langchain>=0.2", "langchain-openai>=0.1", "langchain-community>=0.2"]
llamaindex = ["llama-index>=0.10", "llama-index-embeddings-openai>=0.2"]

# Local vector stores:
faiss    = ["faiss-cpu>=1.8"]
chroma   = ["chromadb>=0.5"]

# Meta-extra: 默认向量库 (FAISS). v1.2 README 快速上手用 `--extra vector`.
vector   = ["faiss-cpu>=1.8"]

# Embedding / LLM clients — only enabled if the user has the keys.
openai   = ["openai>=1.40"]
anthropic = ["anthropic>=0.30"]

# ADR-0001 §"pyproject.toml": LLM stub (直裸 OpenAI 兼容 SDK).
# 装上后才能 `import openai`; 测试 mock.patch("openai.OpenAI") 也需要 openai 已装.
llm      = ["openai>=1.30", "httpx>=0.27"]

# Meta-extra: Web 入口 (FastAPI + uvicorn). fastapi 已在默认 deps, 这里只是
# 提供语义化 alias 给 README 的快速上手命令 (`--extra web`).
web      = []

# Dev / lint:
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    # ADR-0001 §"测试改动": tests/test_llm_base.py 用 mock.patch("openai.OpenAI").
    # dev extras 装 openai, 测试环境无需 `uv sync --extra llm` 也能跑测试.
    "openai>=1.30",
    # MAQ-42 e2e test 需要 requests 跑子进程拉端点
    "requests>=2.31",
]

[project.scripts]
rag-demo = "rag_demo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_demo"]

# ── Tooling ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# errors.py 的 ERROR_CODES 字典需要中文 message 跨列对齐, E501 误伤
"src/rag_demo/errors.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not e2e'"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests (run with pytest -m e2e; default pytest skips them)",
    "eval: Recall@K evaluation harness tests (run with pytest -m eval)",
]
